@@ -4,6 +4,7 @@
 - Bugfix: Making timezone aware row values naive
 - Showing whole year on year view, even future months
 - Added description column to invoice
+- Added /current-month/ and /current-year/ views
 
 === 0.1.4 ===
 
